## [Unreleased]
### Added
- Added the trait `SparsableTrait` to serde_json::Value

## [0.1.1] - 2021-01-20
### Added
- Support for `Option<T>`
- The `url` feature, adding support for `url::Url`

## [0.1.0] - 2021-01-18
### Added

- 🎉 first (veeeeeeeery alpha) release!