@@ -8,7 +8,7 @@ use std::any::Any;
 ///
 /// The [SparseSelector](SparseSelector) allows to switch between a raw, unparsed pointer
 /// to a parsed pointer resolved at initialization.
-#[derive(Debug, Clone, Deserialize, Serialize)]
+#[derive(Debug, Clone, Deserialize, Serialize, PartialEq)]
 #[serde(bound = "T: DeserializeOwned + Serialize + SparsableTrait")]
 #[serde(untagged)]
 pub enum SparseSelector<T: DeserializeOwned + Serialize + SparsableTrait> {
